# IvarArcade

./: .gitattributes  .gitignore  ACTION_PLAN_BUTTON_DATABASE.md  BUILDING.md  BUTTON_ANALYSIS_EXPANDED.md  BUTTON_LABEL_DETECTION_DELIVERABLES.md  CLEANUP_CHECKLIST.md  CLEANUP_PROPOSAL.md  CLEANUP_SUMMARY.txt  CMakeLists.txt  COMPREHENSIVE_BUTTON_ANALYSIS.md  CONTROL_ANALYSIS_DELIVERABLES.md  CONTROL_LIST.txt  CUSTOM_MAPPING_REFERENCE.md  DOCUMENTATION_INDEX.md  FINAL_STATUS.md  HONEST_ASSESSMENT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MAKEFILE_REFERENCE.md  MAME_BUTTON_DEFINITIONS_VERIFIED.md  MAME_SOURCE_EXTRACTION_SUCCESS.md  MIGRATION_GUIDE.sh  Makefile  PACKAGE_INDEX.txt  QUICK_REFERENCE.md  README.md  REFINED_CONTROL_ANALYSIS.md  RESTRUCTURING.md  SCOPE_CORRECTION_REPORT.md  SESSION_REFINEMENT.md  SESSION_SUMMARY.md  THIS_SESSION_INDEX.md  dmarquees.c
Backup_RetroPie/: analyze_games.sh  cp_opt.sh  cp_roms.sh  readme.txt  rm_cfg.sh  set_asound.sh
Backup_RetroPie/home/danc/.config/: wayfire.ini
Backup_RetroPie/home/danc/scripts/: leds_off.py  run_mame.sh  set_leds.py  swap_banner_art.sh  xinmo-swap.py
Backup_RetroPie/opt/retropie/configs/all/: autostart.sh  emulators.cfg  retroarch-core-options.cfg  runcommand-onend.sh  runcommand-onlaunch.sh
Backup_RetroPie/opt/retropie/configs/all/emulationstation/: es_input.cfg  es_settings.cfg
Backup_RetroPie/opt/retropie/configs/all/emulationstation/collections/: custom-Analog Stick with Spinners.cfg  custom-Ferrari GT Wheel with Pedals.cfg  custom-Fight Sticks with Trackball.cfg  custom-Horizontal Landscape.cfg  custom-Vertical Portrait.cfg
Backup_RetroPie/opt/retropie/configs/all/emulationstation/gamelists/arcade/: gamelist.xml
Backup_RetroPie/opt/retropie/configs/all/retroarch/autoconfig/: Generic X-Box pad.cfg  Thrustmaster FGT Rumble 3-in-1.cfg  Trooper V2.cfg  UltraStik Ultimarc Ultra-Stik Player 1.cfg  mo.com Xinmotek Controller.cfg
Backup_RetroPie/opt/retropie/configs/arcade/: emulators.cfg  retroarch.cfg
Backup_RetroPie/opt/retropie/emulators/mame/categories/: Atari_FS.ini  B_list.ini  Driving.ini  FGT_wheel.ini  Panel1.ini  favorite_DC.ini
Backup_RetroPie/opt/retropie/emulators/mame/cfg_ra/: default.cfg  dkong.cfg  dkongjr.cfg  indytemp.cfg  qbert.cfg  spyhunt.cfg
Backup_RetroPie/opt/retropie/emulators/mame/cfg_sa/: default.cfg  dkong.cfg  dkongjr.cfg  indytemp.cfg  mhavoc.cfg  punchout.cfg  qbert.cfg  spyhunt.cfg
Backup_RetroPie/opt/retropie/emulators/mame/ctrlr/: allctrlrs.cfg  atarifs.cfg  dcpanel1.cfg
Backup_RetroPie/opt/retropie/emulators/mame/ini/: mame.ini  plugin.all  plugin.nomarquee  punchout.ini  qbert.ini  ui.ini
Backup_RetroPie/opt/retropie/emulators/mame/ini_horz_ror/: horizont.ini
Backup_RetroPie/opt/retropie/emulators/mame/plugins/leds/: init.lua  plugin.json
Backup_RetroPie/opt/retropie/emulators/mame/plugins/marquee/: init.lua  plugin.json
Backup_RetroPie/opt/retropie/emulators/mame/plugins/nvdiff/: init.lua  plugin.json
analyze_games/: ANALYZE_CONTROLS_README.md  BEFORE_AND_AFTER.md  BUTTON_LABELS_ANALYSIS.md  BUTTON_LABEL_DETECTION.md  CMakeLists.txt  CONTROL_ANALYSIS_EXTENSION.md  DOCUMENTATION_INDEX.md  ENHANCED_BUTTON_DETECTION_SUMMARY.md  EXTENSION_EXAMPLES.cpp  IMPLEMENTATION_SUMMARY.md  KNOWN_DUAL_BUTTON_GAMES.yml  Makefile  QUICK_REFERENCE.md  README.md  VERIFYING_BUTTON_LABELS.md  analyze_controls  analyze_controls.cpp  analyze_games.cpp  list_controls  list_controls.cpp
dmarquees/: CMakeLists.txt  Makefile  README.md  dmarquees.c  helpers.c  helpers.h
docs/: MAPPING_README.txt  button_mappings_comparison.csv  complete_button_mapping.csv  custom_game_mappings.txt  hardware_controllers.txt  mapping_retroarch_path.txt  mapping_standalone_path.txt
plugins/leds/: init.lua
plugins/marquee/: init.lua  plugin.json
scripts/Backup_RetroPie/: cp_opt.sh  readme.txt
scripts/Backup_RetroPie/home/danc/scripts/: xinmo-swap.py  xinmo-swapcheck.py
scripts/Backup_RetroPie/opt/retropie/configs/all/: autostart.sh  retroarch.cfg  runcommand-onend.sh
tools/UltraStikMaps/: 4-Way, No Sticky (UD Bias).um  4-WayQBert.um  8-WayEasyDiagonals.um  Analog & Mouse.ugc  Mouse & Analog.ugc
